--- a/main/resources/db.properties
+++ b/main/resources/db.properties
@@ -1,7 +1,7 @@
-jdbc.user=root
-jdbc.password=123456
+jdbc.user=zzk
+jdbc.password=No.1zph
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.jdbcUrl=jdbc:mysql://localhost:3306/zzk?useUnicode=true&amp;amp;characterEncoding=utf-8
+jdbc.jdbcUrl=jdbc:mysql://116.196.91.223:3306/zzk?useUnicode=true&amp;amp;characterEncoding=utf-8
 
 jdbc.initPoolSize=5
 jdbc.maxPoolSize=10
